[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://models/skimmer_modular.msh" type="Mesh" id=2]
[ext_resource path="res://sprites/red_bar.tex" type="Texture" id=3]
[ext_resource path="res://sprites/green_bar.tex" type="Texture" id=4]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.871461, 0.458233, 0.815109 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.485209, 0.292205, 3.55187 )

[node name="boss" type="KinematicBody" groups=[
"enemy",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.326697, 0.36251, 0 )
shapes/0/trigger = false
collision/layers = 492614
collision/mask = 230982
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001
script/script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 2 )
mesh/skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null

[node name="CollisionShape" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.326697, 0.36251, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="pt1" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.513986, 0.223925, -0.263938 )

[node name="pt2" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.513986, 0.223925, 0.282944 )

[node name="Area" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 6.14342, 0, -0.277487 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.259651, 0.262448, -3.61269 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.259651, 0.262448, -3.61269 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="bull" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="readbar" type="Sprite3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -3.31975e-08, 0, 0.203765, 0, 0.203765, 0, -0.203765, 0, -3.31975e-08, 0, 0.915641, 0.328483 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = false
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="hp" type="Sprite3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -8.90401e-09, 0, 0.203765, 0, 0.203765, 0, -0.2037, 0, -8.90685e-09, 0.00955492, 0.916804, 0.330789 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = false
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 0.171875, 1, 0, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/alpha_cut = 0
texture = ExtResource( 4 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[connection signal="exit_tree" from="." to="." method="_on_boss_exit_tree"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_enter" from="Area" to="." method="_on_Area_body_enter"]

[connection signal="body_exit" from="Area" to="." method="_on_Area_body_exit"]

[connection signal="timeout" from="bull" to="." method="_on_bull_timeout"]


